compiler/test/fail/obj_spread.js
// Cannot handle spread element

const a = {
  id: "first",
  name: "second",
};

const b = {
  ...a,
  content: "string",
};
